--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "validate": "npm run type-check && npm run lint"
   },
   "dependencies": {
+    "jose": "^5.2.0",
     "next": "^14.2.0",
     "openai": "^4.28.0",
     "react": "^18.2.0",
